update before migration

--- a/Papers/Cather_Domestic_Labor/cather.bib
+++ b/Papers/Cather_Domestic_Labor/cather.bib
@@ -1,18 +1,141 @@
 
-@article{reynolds_modernist_2003,
-	title = {Modernist {Space}: {Willa} {Cather}’s {Environmental} {Imagination} in {Context}},
-	shorttitle = {Modernist {Space}},
-	url = {http://digitalcommons.unl.edu/englishfacpubs/2},
-	journal = {Faculty Publications -- Department of English},
-	author = {Reynolds, Guy},
-	month = jan,
+@book{cather_professors_2002,
+	address = {Lincoln},
+	title = {The {Professor}'s {House}},
+	isbn = {0803214286},
+	publisher = {University of Nebraska Press},
+	author = {Cather, Willa},
+	year = {2002},
+	keywords = {College teachers, Middle-aged men, Midlife crisis, Teacher-student relationships},
+	file = {The professor's house - CLIO:/Users/phillippolefrone/Library/Application Support/Zotero/Profiles/eo9trl00.default/zotero/storage/QP5QUAKQ/4084923.html:text/html}
+}
+
+@book{cather_death_2011,
+	title = {Death {Comes} for the {Archbishop}},
+	isbn = {9780307805225},
+	abstract = {Willa Cather's best known novel; a narrative that recounts a life lived simply in the silence of the southwestern desert.BONUS: The edition includes an excerpt from The Selected Letters of Willa Cather.},
+	language = {en},
+	publisher = {Knopf Doubleday Publishing Group},
+	author = {Cather, Willa},
+	month = aug,
+	year = {2011},
+	keywords = {Fiction / Literary}
+}
+
+@book{downs_becoming_1999,
+	address = {Selinsgrove, PA},
+	title = {Becoming {Modern} : {Willa} {Cather}'s {Journalism}},
+	isbn = {1575910233},
+	shorttitle = {Becoming modern},
+	publisher = {Susquehanna University Press},
+	author = {Downs, M. Catherine},
+	year = {1999},
+	keywords = {Cather, Willa, 1873-1947, History, History and criticism, Journalism, Knowledge, Reportage literature, American, United States, Women and journalism},
+	file = {Becoming modern \: Willa Cather's journalism - CLIO:/Users/phillippolefrone/Library/Application Support/Zotero/Profiles/eo9trl00.default/zotero/storage/AI73EK68/2390109.html:text/html}
+}
+
+@article{dyck_willa_2003,
+	title = {{WILLA} {CATHER}'{S} {RELUCTANT} {NEW} {WOMAN} {PIONEER}},
+	volume = {23},
+	copyright = {Copyright © 2003 University of Nebraska Press},
+	issn = {0275-7664},
+	url = {http://www.jstor.org/stable/23533090},
+	number = {3},
+	urldate = {2015-03-20},
+	journal = {Great Plains Quarterly},
+	author = {DYCK, REGINALD},
+	month = jul,
 	year = {2003},
-	file = {"Modernist Space\: Willa Cather’s Environmental Imagination in Context" by Guy J. Reynolds:/Users/phillippolefrone/Library/Application Support/Zotero/Profiles/eo9trl00.default/zotero/storage/AKI72F9Q/2.html:text/html}
+	pages = {161--173},
+	file = {JSTOR Full Text PDF:/Users/phillippolefrone/Library/Application Support/Zotero/Profiles/eo9trl00.default/zotero/storage/DWXCXSSA/DYCK - 2003 - WILLA CATHER'S RELUCTANT NEW WOMAN PIONEER.pdf:application/pdf}
+}
+
+@book{edelman_no_2004,
+	title = {No {Future}: {Queer} {Theory} and the {Death} {Drive}},
+	isbn = {0822333694},
+	shorttitle = {No {Future}},
+	abstract = {In this searing polemic, Lee Edelman outlines a radically uncompromising new ethics of queer theory. His main target is the all-pervasive figure of the child, which he reads as the linchpin of our universal politics of “reproductive futurism.” Edelman argues that the child, understood as innocence in need of protection, represents the possibility of the future against which the queer is positioned as the embodiment of a relentlessly narcissistic, antisocial, and future-negating drive. He boldly insists that the efficacy of queerness lies in its very willingness to embrace this refusal of the social and political order. In No Future, Edelman urges queers to abandon the stance of accommodation and accede to their status as figures for the force of a negativity that he links with irony, jouissance, and, ultimately, the death drive itself.Closely engaging with literary texts, Edelman makes a compelling case for imagining Scrooge without Tiny Tim and Silas Marner without little Eppie. Looking to Alfred Hitchcock’s films, he embraces two of the director’s most notorious creations: the sadistic Leonard of North by Northwest, who steps on the hand that holds the couple precariously above the abyss, and the terrifying title figures of The Birds, with their predilection for children. Edelman enlarges the reach of contemporary psychoanalytic theory as he brings it to bear not only on works of literature and film but also on such current political flashpoints as gay marriage and gay parenting. Throwing down the theoretical gauntlet, No Future reimagines queerness with a passion certain to spark an equally impassioned debate among its readers.},
+	language = {en},
+	publisher = {Duke University Press},
+	author = {Edelman, Lee},
+	month = dec,
+	year = {2004},
+	keywords = {Literary Criticism / LGBT, Literary Criticism / Semiotics \& Theory, Social Science / Gay Studies}
+}
+
+@book{fleissner_women_2004,
+	address = {Chicago},
+	title = {Women, {Compulsion}, {Modernity}: {The} {Moment} of {American} {Naturalism}},
+	isbn = {0226253090 (cloth : alk. paper)},
+	shorttitle = {Women, compulsion, modernity},
+	publisher = {University of Chicago},
+	author = {Fleissner, Jennifer},
+	year = {2004},
+	file = {Women, compulsion, modernity \: the moment of American naturalism - CLIO:/Users/phillippolefrone/Library/Application Support/Zotero/Profiles/eo9trl00.default/zotero/storage/3E5RP2B2/4756276.html:text/html}
+}
+
+@book{fryer_felicitous_1986,
+	address = {Chapel Hill},
+	title = {Felicitous {Space}: {The} {Imaginative} {Structures} of {Edith} {Wharton} and {Willa} {Cather}},
+	isbn = {0807816558},
+	shorttitle = {Felicitous space},
+	publisher = {University of North Carolina Press},
+	author = {Fryer, Judith},
+	year = {1986},
+	keywords = {American fiction, Cather, Willa, 1873-1947, Criticism and interpretation, Feminism and literature, History and criticism, Space (Architecture) in literature, Wharton, Edith, 1862-1937, Women authors, Women in literature},
+	file = {Felicitous space \: the imaginative structures of Edith Wharton and Willa Cather - CLIO:/Users/phillippolefrone/Library/Application Support/Zotero/Profiles/eo9trl00.default/zotero/storage/ZAA2V8CU/475299.html:text/html}
+}
+
+@book{gilman_women_1966,
+	address = {New York},
+	edition = {Torchbook},
+	title = {Women and {Economics}},
+	publisher = {Harper \& Row},
+	author = {Gilman, Charlotte Perkins},
+	year = {1966},
+	file = {Women and economics\; a study of the economic relation between men and women as a factor in social evolution - CLIO:/Users/phillippolefrone/Library/Application Support/Zotero/Profiles/eo9trl00.default/zotero/storage/IC9XISQT/2791353.html:text/html}
+}
+
+@book{gilman_home:_2002,
+	address = {Walnut Creek, CA},
+	title = {The {Home}: {Its} {Work} and {Influence}},
+	isbn = {0759103054},
+	publisher = {AltaMira Press},
+	author = {Gilman, Charlotte Perkins},
+	year = {2002},
+	file = {The home, its work and influence - CLIO:/Users/phillippolefrone/Library/Application Support/Zotero/Profiles/eo9trl00.default/zotero/storage/F7H8Z8GU/8619931.html:text/html}
+}
+
+@incollection{gilman_bee_2009,
+	title = {Bee {Wise}},
+	isbn = {9781101145029},
+	abstract = {Wonderfully sardonic and slyly humorous, the writings of landmark American feminist and socialist thinker Charlotte Perkins Gilman were penned in response to her frustrations with the gender-based double standard that prevailed in America as the twentieth century began. Perhaps best known for her chilling depiction of a woman's mental breakdown in her unforgettable 1892 short story 'The Yellow Wall-Paper', Gilman also wrote Herland, a wry novel that imagines a peaceful, progressive country from which men have been absent for 2,000 years. Both are included in this volume, along with a selection of Gilman's major short stories and her poems.},
+	language = {en},
+	booktitle = {The {Yellow} {Wall}-{Paper}, {Herland}, and {Selected} {Writings}},
+	publisher = {Penguin},
+	author = {Gilman, Charlotte Perkins},
+	month = sep,
+	year = {2009},
+	keywords = {Fiction / Classics, Fiction / Short Stories (single author), Social Science / Feminism \& Feminist Theory},
+	pages = {263--71}
+}
+
+@book{halberstam_queer_2005,
+	title = {In a {Queer} {Time} and {Place}: {Transgender} {Bodies}, {Subcultural} {Lives}},
+	isbn = {9780814735855},
+	shorttitle = {In a {Queer} {Time} and {Place}},
+	abstract = {In her first book since the critically acclaimed Female Masculinity, Judith Halberstam examines the significance of the transgender body in a provocative collection of essays on queer time and space. She presents a series of case studies focused on the meanings of masculinity in its dominant and alternative forms’especially female and trans-masculinities as they exist within subcultures, and are appropriated within mainstream culture.In a Queer Time and Place opens with a probing analysis of the life and death of Brandon Teena, a young transgender man who was brutally murdered in small-town Nebraska. After looking at mainstream representations of the transgender body as exhibited in the media frenzy surrounding this highly visible case and the Oscar-winning film based on Brandon's story, Boys Don’t Cry, Halberstam turns her attention to the cultural and artistic production of queers themselves. She examines the “transgender gaze,” as rendered in small art-house films like By Hook or By Crook, as well as figurations of ambiguous embodiment in the art of Del LaGrace Volcano, Jenny Saville, Eva Hesse, Shirin Neshat, and others. She then exposes the influence of lesbian drag king cultures upon hetero-male comic films, such as Austin Powers and The Full Monty, and, finally, points to dyke subcultures as one site for the development of queer counterpublics and queer temporalities. Considering the sudden visibility of the transgender body in the early twenty-first century against the backdrop of changing conceptions of space and time, In a Queer Time and Place is the first full-length study of transgender representations in art, fiction, film, video, and music. This pioneering book offers both a jumping off point for future analysis of transgenderism and an important new way to understand cultural constructions of time and place.},
+	language = {en},
+	publisher = {NYU Press},
+	author = {Halberstam, Judith},
+	month = jan,
+	year = {2005},
+	keywords = {Literary Criticism / Feminist, Literary Criticism / Gay \& Lesbian, Literary Criticism / LGBT, Social Science / Gender Studies}
 }
 
 @book{harrell_mesa_1992,
 	address = {Albuquerque},
-	title = {From {Mesa} {Verde} to {The} professor's house},
+	title = {From {Mesa} {Verde} to {The} {Professor}'s {House}},
 	isbn = {0826313868},
 	publisher = {University of New Mexico Press},
 	author = {Harrell, David},
@@ -21,9 +144,51 @@
 	file = {From Mesa Verde to The professor's house - CLIO:/Users/phillippolefrone/Library/Application Support/Zotero/Profiles/eo9trl00.default/zotero/storage/V2ZRNZIN/1159560.html:text/html}
 }
 
+@article{hilgart_death_1998,
+	title = {Death {Comes} for the {Aesthete}: {Commodity} {Culture} and the {Artifact} in {Cather}'s "{The} {Professor}'s {House}"},
+	volume = {30},
+	copyright = {Copyright © 1998 Studies in the Novel, University of North Texas},
+	issn = {0039-3827},
+	shorttitle = {{DEATH} {COMES} {FOR} {THE} {AESTHETE}},
+	url = {http://www.jstor.org/stable/29533279},
+	number = {3},
+	urldate = {2015-03-20},
+	journal = {Studies in the Novel},
+	author = {Hilgart, John},
+	month = oct,
+	year = {1998},
+	pages = {377--404},
+	file = {JSTOR Full Text PDF:/Users/phillippolefrone/Library/Application Support/Zotero/Profiles/eo9trl00.default/zotero/storage/D76BKT28/HILGART - 1998 - DEATH COMES FOR THE AESTHETE COMMODITY CULTURE AN.pdf:application/pdf}
+}
+
+@incollection{kelley_harvey_2006,
+	address = {2455 Teller Road,  Thousand Oaks  California  91320  United States},
+	title = {Harvey, {Frederick} {Henry} (1835–1901)},
+	isbn = {9781412905503, 9781412952439},
+	url = {http://knowledge.sagepub.com/view/immigration/n131.xml},
+	urldate = {2015-04-26},
+	booktitle = {Encyclopedia of {Immigration} and {Migration} in the {American} {West}},
+	publisher = {SAGE Publications, Inc.},
+	author = {Kelley, Suzzanne},
+	year = {2006}
+}
+
+@book{levine_forms:_2015,
+	title = {Forms: {Whole}, {Rhythm}, {Hierarchy}, {Network}},
+	isbn = {9781400852604},
+	shorttitle = {Forms},
+	abstract = {Forms offers a powerful new answer to one of the most pressing problems facing literary, critical, and cultural studies today—how to connect form to political, social, and historical context. Caroline Levine argues that forms organize not only works of art but also political life—and our attempts to know both art and politics. Inescapable and frequently troubling, forms shape every aspect of our experience. But forms don’t impose their order in any simple way. Multiple shapes, patterns, and arrangements, overlapping and colliding, generate complex and unpredictable social landscapes that challenge and unsettle conventional analytic models in literary and cultural studies.Borrowing the concept of “affordances” from design theory, this book investigates the specific ways that four major forms—wholes, rhythms, hierarchies, and networks—have structured culture, politics, and scholarly knowledge across periods, and it proposes exciting new ways of linking formalism to historicism and literature to politics. Levine rereads both formalist and antiformalist theorists, including Cleanth Brooks, Michel Foucault, Jacques Rancière, Mary Poovey, and Judith Butler, and she offers engaging accounts of a wide range of objects, from medieval convents and modern theme parks to Sophocles’s Antigone and the television series The Wire. The result is a radically new way of thinking about form for the next generation and essential reading for scholars and students across the humanities who must wrestle with the problem of form and context.},
+	language = {en},
+	publisher = {Princeton University Press},
+	author = {Levine, Caroline},
+	month = jan,
+	year = {2015},
+	keywords = {Literary Criticism / General, Literary Criticism / Semiotics \& Theory, Social Science / Anthropology / Cultural}
+}
+
 @book{lindemann_willa_1999,
 	address = {New York},
-	title = {Willa {Cather}, queering {America}},
+	title = {Willa {Cather}: {Queering} {America}},
 	isbn = {0231113242},
 	publisher = {Columbia University Press},
 	author = {Lindemann, Marilee},
@@ -34,7 +199,7 @@
 
 @book{love_feeling_2007,
 	address = {Cambridge, Mass},
-	title = {Feeling backward : loss and the politics of queer history},
+	title = {Feeling {Gackward} : {Loss} and the {Politics} of {Queer} {History}},
 	isbn = {9780674026520},
 	shorttitle = {Feeling backward},
 	publisher = {Harvard University Press},
@@ -60,61 +225,39 @@
 	file = {JSTOR Full Text PDF:/Users/phillippolefrone/Library/Application Support/Zotero/Profiles/eo9trl00.default/zotero/storage/FQ7NMJ2M/Michaels - 1990 - The Vanishing American.pdf:application/pdf}
 }
 
-@article{dyck_willa_2003,
-	title = {{WILLA} {CATHER}'{S} {RELUCTANT} {NEW} {WOMAN} {PIONEER}},
-	volume = {23},
-	copyright = {Copyright © 2003 University of Nebraska Press},
-	issn = {0275-7664},
-	url = {http://www.jstor.org/stable/23533090},
-	number = {3},
-	urldate = {2015-03-20},
-	journal = {Great Plains Quarterly},
-	author = {DYCK, REGINALD},
-	month = jul,
-	year = {2003},
-	pages = {161--173},
-	file = {JSTOR Full Text PDF:/Users/phillippolefrone/Library/Application Support/Zotero/Profiles/eo9trl00.default/zotero/storage/DWXCXSSA/DYCK - 2003 - WILLA CATHER'S RELUCTANT NEW WOMAN PIONEER.pdf:application/pdf}
-}
-
-@book{downs_becoming_1999,
-	address = {Selinsgrove, PA},
-	title = {Becoming modern : {Willa} {Cather}'s journalism},
-	isbn = {1575910233},
-	shorttitle = {Becoming modern},
-	publisher = {Susquehanna University Press},
-	author = {Downs, M. Catherine},
-	year = {1999},
-	keywords = {Cather, Willa, 1873-1947, History, History and criticism, Journalism, Knowledge, Reportage literature, American, United States, Women and journalism},
-	file = {Becoming modern \: Willa Cather's journalism - CLIO:/Users/phillippolefrone/Library/Application Support/Zotero/Profiles/eo9trl00.default/zotero/storage/AI73EK68/2390109.html:text/html}
-}
-
-@article{hilgart_death_1998,
-	title = {{DEATH} {COMES} {FOR} {THE} {AESTHETE}: {COMMODITY} {CULTURE} {AND} {THE} {ARTIFACT} {IN} {CATHER}'{S} "{THE} {PROFESSOR}'{S} {HOUSE}"},
-	volume = {30},
-	copyright = {Copyright © 1998 Studies in the Novel, University of North Texas},
-	issn = {0039-3827},
-	shorttitle = {{DEATH} {COMES} {FOR} {THE} {AESTHETE}},
-	url = {http://www.jstor.org/stable/29533279},
-	number = {3},
-	urldate = {2015-03-20},
-	journal = {Studies in the Novel},
-	author = {HILGART, JOHN},
+@book{nealon_foundlings:_2001,
+	title = {Foundlings: {Lesbian} and {Gay} {Historical} {Emotion} {Before} {Stonewall}},
+	isbn = {0822326973},
+	shorttitle = {Foundlings},
+	abstract = {What is it like to “feel historical”? In Foundlings Christopher Nealon analyzes texts produced by American gay men and lesbians in the first half of the twentieth century—poems by Hart Crane, novels by Willa Cather, gay male physique magazines, and lesbian pulp fiction. Nealon brings these diverse works together by highlighting a coming-of-age narrative he calls “foundling”—a term for queer disaffiliation from and desire for family, nation, and history. The young runaways in Cather’s novels, the way critics conflated Crane’s homosexual body with his verse, the suggestive poses and utopian captions of muscle magazines, and Beebo Brinker, the aging butch heroine from Ann Bannon’s pulp novels—all embody for Nealon the uncertain space between two models of lesbian and gay sexuality. The “inversion” model dominant in the first half of the century held that homosexuals are souls of one gender trapped in the body of another, while the more contemporary “ethnic” model refers to the existence of a distinct and collective culture among gay men and lesbians. Nealon’s unique readings, however, reveal a constant movement between these two discursive poles, and not, as is widely theorized, a linear progress from one to the other. This startlingly original study will interest those working on gay and lesbian studies, American literature and culture, and twentieth-century history.},
+	language = {en},
+	publisher = {Duke University Press},
+	author = {Nealon, Christopher},
 	month = oct,
-	year = {1998},
-	pages = {377--404},
-	file = {JSTOR Full Text PDF:/Users/phillippolefrone/Library/Application Support/Zotero/Profiles/eo9trl00.default/zotero/storage/D76BKT28/HILGART - 1998 - DEATH COMES FOR THE AESTHETE COMMODITY CULTURE AN.pdf:application/pdf}
+	year = {2001},
+	keywords = {History / Social History, Social Science / Gay Studies, Social Science / General, Social Science / Lesbian Studies}
 }
 
-@book{cather_professors_2002,
-	address = {Lincoln},
-	title = {The professor's house},
-	isbn = {0803214286},
-	publisher = {University of Nebraska Press},
-	author = {Cather, Willa},
-	year = {2002},
-	keywords = {College teachers, Middle-aged men, Midlife crisis, Teacher-student relationships},
-	annote = {"Testing notes."},
-	file = {The professor's house - CLIO:/Users/phillippolefrone/Library/Application Support/Zotero/Profiles/eo9trl00.default/zotero/storage/QP5QUAKQ/4084923.html:text/html}
+@article{reynolds_modernist_2003,
+	title = {Modernist {Space}: {Willa} {Cather}’s {Environmental} {Imagination} in {Context}},
+	shorttitle = {Modernist {Space}},
+	url = {http://digitalcommons.unl.edu/englishfacpubs/2},
+	journal = {Faculty Publications -- Department of English},
+	author = {Reynolds, Guy},
+	month = jan,
+	year = {2003},
+	file = {"Modernist Space\: Willa Cather’s Environmental Imagination in Context" by Guy J. Reynolds:/Users/phillippolefrone/Library/Application Support/Zotero/Profiles/eo9trl00.default/zotero/storage/AKI72F9Q/2.html:text/html}
+}
+
+@book{romines_home_1992,
+	title = {The {Home} {Plot}: {Women}, {Writing} \& {Domestic} {Ritual}},
+	isbn = {0870237837},
+	shorttitle = {The {Home} {Plot}},
+	abstract = {In this finely crafted study, Ann Romines builds on twenty years of feminist scholarship to show how domestic ritual--the practice and tradition of housekeeping has helped shape the substance and tone of some of the best fiction by American women. Examining works by Harriet Beecher Stowe, Sarah Orne Jewett, Mary Wilkins Freeman, Willa Cather, and Eudora Welty, Romines argues that one cannot fully appreciate this writing unless one understands the domestic codes in which it is inscribed. Romines opens with the American realist period, when such women as Stowe and Jewett began to experiment with plots generated by the rhythms of domestic ritual. Chapter 2 is an extended reading of Jewett's The Country of the Pointed Firs, showing how the silent, traditional language of housekeeping becomes the medium for an autobiographical writer and her sibylline mentor. In chapter 3, Romines shows how Freeman devised a very different strategy, counterpointing climactic plots against relentless repetitions in ways that evoke the stresses and satisfactions of housekeepers' lives. Chapters 4 and 5 discuss Cather's ambitious career. Although at first determined to avoid the constraints of domesticity in her writing, Cather increasingly was drawn to women's culture, and her later novels include several triumphant experiments with domestic fiction. The final two chapters, on Eudora Welty, reveal how the priorities of housekeeping have marked her fiction from beginning to end. By reading domestic ritual as a gendered language, Romines seeks to reclaim one of the oldest female traditions-housekeeping--from trivialization and devaluation. In the process, she brings fresh insight to the work of five importantAmerican novelists. "In this important and stimulating study, Romines helps to pioneer a new direction in feminist criticism, one that locates women's aesthetics in their material practices, particularly in the rituals of domestic labor".},
+	language = {en},
+	publisher = {Univ of Massachusetts Press},
+	author = {Romines, Ann},
+	year = {1992}
 }
 
 @article{sedgwick_across_1989,
